# personalfinance

backend/personal-finance-app/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
backend/personal-finance-app/app/: __init__.py  main.py
backend/personal-finance-app/app/api/v1/: api.py
backend/personal-finance-app/app/core/: config.py  database.py  security.py
backend/personal-finance-app/app/middleware/: logging.py
backend/personal-finance-app/app/models/: account.py  budget.py  category.py  institution.py  merchant.py  transaction.py  user.py
backend/personal-finance-app/app/repositories/: account_repository.py  base.py  budget_repository.py  category_repository.py  institution_repository.py  merchant_repository.py  transaction_repository.py  user_repository.py
backend/personal-finance-app/app/schemas/: account.py  budget.py  category.py  institution.py  merchant.py  transaction.py  user.py
backend/personal-finance-app/app/services/: auth_service.py  budget_service.py  report_service.py  transaction_service.py  user_service.py
backend/personal-finance-app/app/utils/: currency.py  helpers.py  validators.py
backend/personal-finance-app/docs/: README.md  api_contract.md
backend/personal-finance-app/migrations/: env.py
backend/personal-finance-app/requirements/: base.txt  dev.txt
backend/personal-finance-app/scripts/: deploy.sh  postgres_initialize.sql  postgres_setup.sql  seed_data.py  setup_db.sh
backend/personal-finance-app/scripts/bck/: postgres_setup3.sql  postgres_setup4.sql  postgres_setup_old.sql
(+51 files in other folders)
