[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-finance-app"
version = "0.1.0"
description = "Microservice for personal finance (FastAPI scaffold)"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.95.0",
	"uvicorn[standard]>=0.20.0",
	"sqlalchemy>=1.4",
	"pydantic>=2.0",
	"python-jose>=3.3.0",
	"alembic>=1.10.0",
]
